--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -13,7 +13,7 @@
 body{
     line-height: 16px;
     font-size: 16px;
-    font-family: 'Poppins', sans-serif;
+    /* font-family: 'Poppins', sans-serif; */
 }
 
 *{
@@ -37,10 +37,30 @@ ul
     display: block;
     position: fixed;
     left: 270px;
+    padding: 0 30px;
     top: 0;
     right: 0;
     z-index: 0;
     opacity: 1;
+}
+.padd-15
+{
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.container
+{
+    max-width: 1100px;
+    width: 100%;
+    margin: auto;
+}
+.row
+{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -15px;
+    margin-right: -15px;
+    position: relative;
 }
 /* header */
 header{
@@ -122,7 +142,7 @@ header{
     top: 20px;
     border-radius: 5px;
     background: var(--bg-black-100);
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
 }
@@ -172,4 +192,43 @@ header{
 
 .aside .nav li a i{
     margin-right: 15px;
+}
+
+
+/* Home */
+.home
+{
+    min-height: 100vh;
+    display: flex;
+    color: var(--text-black-900);
+}
+.home .home-info
+{
+    flex: 0 0 60%;
+    max-width: 60%;
+}
+h3.hello
+{
+    font-size: 28px;
+    margin: 15px 0;
+}
+h3.hello span
+{
+    font-family: 'Clicker Script', cursive;
+    font-size: 30px;
+    font-weight: 700;
+    color: var(--skin-color);
+}
+h3.
+.home .home-img
+{
+    flex: 0 0 40%;
+    max-width: 40%;
+    background: red;
+    text-align: center;
+    position: relative;
+}
+.home .home-img img
+{
+    height: 400px;
 }
