--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -35,13 +35,12 @@ ul
     background: var(--bg-black-900);
     min-height: 100vh;
     display: block;
-    position: fixed;
-    left: 270px;
     padding: 0 30px;
-    top: 0;
-    right: 0;
-    z-index: 0;
     opacity: 1;
+}
+.main-content
+{
+    padding-left: 270px;
 }
 .padd-15
 {
@@ -61,6 +60,23 @@ ul
     margin-left: -15px;
     margin-right: -15px;
     position: relative;
+}
+.btn
+{
+    font-size: 16px;
+    font-weight: 500;
+    padding: 12px 35px;
+    color: white;
+    border-radius: 40px;
+    display: inline-block;
+    white-space: nowrap;
+    border: none;
+    background: var(--skin-color);
+    transition: all 0.3s ease;
+}
+.btn:hover
+{
+    transform: scale(1.05);
 }
 /* header */
 header{
@@ -102,7 +118,7 @@ header{
 }
 .aside .logo a span{
     font-family: 'Clicker Script', cursive;
-    font-family: 40px;
+    font-size: 40px;
 }
 
 .aside .logo a::before{
@@ -129,9 +145,6 @@ header{
     
 }
 
-.aside .nav{
-    margin-top: 50px;
-}
 .aside .nav-toggler{
     height: 40px;
     width: 45px;
@@ -162,7 +175,8 @@ header{
     top: -6px;
     left: 0px;
 }
-.aside .nav-toggler span::after{
+.aside .nav-toggler span::after
+{
     content: '';
     height: 2px;
     width: 18px;
@@ -171,12 +185,16 @@ header{
     top: 6px;
     left: 0px;
 }
+.aside .nav{
+    margin-top: 50px;
+}
 .aside .nav li{
     margin-bottom: 20px;
     display: block;
 }
 
-.aside .nav li a{
+.aside .nav li a
+{
     font-size: 16px;
     font-weight: 600;
     display: block;
@@ -210,8 +228,9 @@ header{
 h3.hello
 {
     font-size: 28px;
-    margin: 15px 0;
+    margin: 30px 0;
 }
+
 h3.hello span
 {
     font-family: 'Clicker Script', cursive;
@@ -219,16 +238,100 @@ h3.hello span
     font-weight: 700;
     color: var(--skin-color);
 }
-h3.
+
+h3.my-profession
+{
+    font-size: 30px;
+    margin: 30px 0;
+}
+
+.typing
+{
+    color: var(--skin-color);
+}
+.home-info p
+{
+    margin-bottom: 70px;
+    font-size: 20px;
+    color: var(--text-black-700);
+}
 .home .home-img
 {
     flex: 0 0 40%;
     max-width: 40%;
-    background: red;
     text-align: center;
     position: relative;
 }
+.home-img::after
+{
+    content: '';
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    border-bottom: 10px solid var(--skin-color);
+    border-right: 10px solid var(--skin-color);
+    right: 20px;
+    bottom: -40px;
+}
+.home-img::before
+{
+    content: '';
+    position: absolute;
+    width: 80px;
+    height: 80px;
+
+    border-top: 10px solid var(--skin-color);
+    border-left: 10px solid var(--skin-color);
+    left: -20px;
+    top: -40px;
+}
+.home-img img
+{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 .home .home-img img
 {
+    margin: auto;
+    border-radius: 5px;    
     height: 400px;
+}
+.home .home-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+#tako, #tako-gif, #tako2 {
+    position: relative;
+    width: 200px; /* Kích thước ban đầu lớn hơn */
+    height: 200px;
+    transition: all 0.2s ease-in-out;
+}
+
+#feed-tako {
+    font-size: 24px;
+    color: red;
+    text-align: center;
+    margin-top: 10px;
+}
+
+.word {
+    cursor: grab;
+    display: inline-block;
+    padding: 5px;
+    font-size: 20px;
+    position: relative;
+    user-select: none;
+    transition: background-image 0.5s ease-in-out;
+}
+
+.cookie {
+    background: url('./../img/cookie.png') no-repeat center center / contain;
+    width: 30px; /* Kích thước phù hợp với thiết kế của bạn */
+    height: 30px;
+    color: transparent; /* Ẩn văn bản */
+    display: inline-block;
 }
