--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -38,6 +38,10 @@ ul
     padding: 0 30px;
     opacity: 1;
 }
+.hidden
+{
+    display: none !important;
+}
 .main-content
 {
     padding-left: 270px;
@@ -52,6 +56,46 @@ ul
     max-width: 1100px;
     width: 100%;
     margin: auto;
+}
+.section .container
+{
+    padding-top: 60px;
+    padding-bottom: 70px;
+}
+.section-title
+{
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-bottom: 60px;
+}
+.section-title h2
+{
+    font-size: 40px;
+    color: var(--text-black-900);
+    font-weight: 700;
+    position: relative;
+}
+.section-title h2::before
+{
+    content: '';
+    height: 4px;
+    width: 50px;
+    background: var(--skin-color);;
+    position: absolute;
+    top: 150%;
+    left: 0;
+}
+
+.section-title h2::after
+{
+    content: '';
+    height: 4px;
+    width: 25px;
+    background: var(--skin-color);;
+    position: absolute;
+    top: 150%;
+    left: 0;
+    margin-top: 8px;
 }
 .row
 {
@@ -297,74 +341,45 @@ h3.my-profession
     border-radius: 5px;    
     height: 400px;
 }
-
-.home .home-img {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+/* About */
+.about .about-content
+{
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+.about .about-content .about-text
+{
+    flex: 0 0 100%;
+    max-width: 100%;
 }
 
-#tako, #tako-gif, #tako3, #tako-eat {
-    position: relative;
-    width: 200px; /* Kích thước ban đầu lớn hơn */
-    height: 200px;
-    transition: all 0.2s ease-in-out;
-}
-
-#feed-tako {
+.about .about-content .about-text h3
+{
     font-size: 24px;
-    color: #fff;
-    text-align: center;
-    background-color: #000; /* Màu nền cho khung thoại */
-    padding: 10px;
-    border-radius: 10px;
-    border: 3px solid #fff; /* Đường viền trắng */
-    max-width: 200px;
-    position: absolute;
-    top: -40px; /* Điều chỉnh vị trí trên đầu tako3 */
-    left: 50%;
-    transform: translateX(-50%);
-    display: none; /* Ẩn ban đầu */
+    margin-bottom: 15px;
+    font-weight: 700;
+    color: var(--text-black-900)
 }
 
-#feed-tako::before {
-    content: "";
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    border-width: 10px;
-    border-style: solid;
-    border-color: #000 transparent transparent transparent;
-    transform: translateX(-50%);
+.about .about-content .about-text h3 span
+{
+    color: var(--skin-color);
 }
-
-#feed-tako::after {
-    content: "";
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    border-width: 7px;
-    border-style: solid;
-    border-color: #fff transparent transparent transparent;
-    transform: translateX(-50%);
-    margin-top: -2px;
+.about .about-content .about-text p
+{
+    font-size: 16px;
+    line-height: 25px;
+    color: var(--text-black-700);
 }
-
-.word {
-    cursor: grab;
-    display: inline-block;
-    padding: 5px;
-    font-size: 20px;
-    position: relative;
-    user-select: none;
-    transition: background-image 0.5s ease-in-out;
+.about .about-content .personal-info
+{
+ flex:0 0 60%;
+ max-width: 60%; 
+ margin-top: 40px;
 }
-
-.cookie {
-    background: url('./../img/cookie.png') no-repeat center center / contain;
-    width: 30px; /* Kích thước phù hợp với thiết kế của bạn */
-    height: 30px;
-    color: transparent; /* Ẩn văn bản */
-    display: inline-block;
+.about .about-content .skills
+{
+ flex: 0 0 40%;
+ max-width: 40%;
+ margin-top: 40px;
 }
