--- a/asset/css/tako.css
+++ b/asset/css/tako.css
@@ -68,3 +68,24 @@
     color: transparent; /* Ẩn văn bản */
     display: inline-block;
 }
+
+.hp-bar {
+    width: 150px; /* Giảm chiều rộng của thanh máu */
+    height: 20px;
+    background-color: #ddd;
+    border: 2px solid #555;
+    border-radius: 10px;
+    overflow: hidden;
+    position: absolute; /* Đảm bảo thanh máu nằm ngang Tako */
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.hp-bar-inner {
+    height: 100%;
+    background-color: #66923d; /* Màu thanh máu ban đầu */
+    width: 100%; /* HP ban đầu là đầy đủ */
+    transition: width 0.5s ease;
+}
+
