--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -6,8 +6,8 @@
     --text-black-900: #302e4d;
     --text-black-700:#504e70;
     --gradient-color: linear-gradient(90deg,
-                      hsl(48, 100%, 50%) 0%,
-                      hsl(28, 100% ,54%, 100%));
+                      hsl(269,13%,48%)0%,
+                      hsl(268,16%,61%));
     --black-color:hsl(225, 15%, 6%);
     --reflection-color: hsla(48, 30%, 95%, .3);
     --body--color: hsl(48, 100%, 98%);
@@ -806,18 +806,18 @@ h3.my-profession
 }
 
 /* button */
-/* .container-button
+.container-button
 {
-   
-    margin-inline: 1.5rem;
-    display: grid;
-    place-items: center;
-} */
+  margin-inline: 1.5rem;
+  display: grid;
+  place-items: center;
+  justify-content: start;
+}
 
 .button{
     position: relative;
     transition: transform .4s;
-    display: flex;
+    /* display: flex; */
 }
 .button__content
 {
@@ -839,7 +839,7 @@ h3.my-profession
 }
 .button__icon
 {
-    position: relative;
+    font-size: 1.5rem;
 }
 .button__text,
 .button__icon{
@@ -863,7 +863,7 @@ h3.my-profession
 
 .button__reflection-1::after
 {
-    content: '';
+    content: "";
     width: 26px;
     height: 100%;
     background-color: var(--reflection-color);
@@ -874,20 +874,20 @@ h3.my-profession
 }
 .button__reflection-2::after
 {
-    content: '';
-    width: 26px;
+    content: "";
+    width: 40px;
     height: 100%;
     background-color: var(--reflection-color);
     position: absolute;
     top: -1rem;
-    left: 8rem;
+    left: .8rem;
 
 }
 
 .button img{
     position: absolute;
     opacity: 0;
-    pointer-events: none;
+    /* pointer-events: none; */
     transition: transform .5s, opacity .5s;
 }
 .button__star-1
@@ -895,36 +895,37 @@ h3.my-profession
     width: 20px;
     top: -14px;
     left: -16px;
-    transform: rotate(48deg);
+    transform: rotate(48deg) scale(.1);
 }
 .button__star-2
 {
     width: 40px;
     right: -10px;
     top: -4px;
-    transform: rotate(-48deg);
+    transform: rotate(-48deg) scale(.1);
 }
-.button_-circle-1,
+.button__circle-1,
 .button__circle-2
 {
-    width: 8px;
+    width: 20px;
 }
 
-.button_-circle-1
+.button__circle-1
 {
     top: -8px;
     left: 58px;
+    transform: scale(.1);
 }
-.button_-circle-2
+.button__circle-2
 {
     top: 34px;
     left: -8px;
     transform: scale(.1);
 }
-.button_diamond{
+.button__diamond{
     width: 18px;
     top: -18px;
-    right:62px;
+    right: 62px;
     transform: scale(.1);
 }
 
@@ -934,4 +935,67 @@ h3.my-profession
     left: 15px;
     bottom: -16px;
     transform: rotate(-48deg) scale(.1);
+}
+
+.button__shadow
+{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: var(--gradient-color);
+    padding: 1.25rem 3rem;
+    border-radius: 4rem;
+    border: 3px solid var(--black-color);
+    z-index: -1;
+    transition: transform .3s;
+}
+.button:hover .button__shadow
+{
+    transform: translate(-.5rem, .5rem);
+}
+.button:hover .button__reflection-1
+{
+    left: 120%;
+}
+.button:hover .button__reflection-2
+{
+    left: -70%;
+}
+.button:hover
+{
+    transform: rotate(-4deg) scale(1.1);
+}
+
+.button:hover img
+{
+    opacity: 1;
+}
+
+.button:hover .button__star-1
+{
+    transform: scale(1.1);
+    transition-delay: .1s;
+}
+.button:hover .button__star-2
+{
+    transform: scale(1.1);
+}
+.button:hover .button__circle-1
+{
+    transform: translateY(-8px) scale(1.1);
+    transition-delay: .1s;
+}
+.button:hover .button__circle-2
+{
+    transform: translate(-20px, 20px) scale(1.1);
+}
+.button:hover .button__diamond
+{
+    transform: translateY(7px) rotate(-24deg) scale(1.1);
+}
+.button:hover .button__triangle
+{
+    transform: rotate(-24deg) scale(1.1);
 }
